--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,6 @@
-me="Hello World Project" default="info">
+<?xml version="1.0"?>
+
+<project name="Hello World Project" default="info">
 
 <target name="info">
 
